--- a/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
@@ -6,25 +6,29 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="640.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ListadoPedidosController">
+<AnchorPane prefHeight="600.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ListadoPedidosController">
    <children>
       <SplitPane dividerPositions="0.43859649122807015" layoutX="6.0" layoutY="7.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="tabla_pedidos" layoutX="-7.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tabla_pedidos" layoutX="-7.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="ID" />
-                      <TableColumn prefWidth="75.0" text="Estado" />
-                        <TableColumn prefWidth="75.0" text="Origen" />
-                        <TableColumn prefWidth="75.0" text="Destino" />
+                      <TableColumn fx:id="id_pedidoColumn" prefWidth="75.0" text="ID" />
+                      <TableColumn fx:id="estadoColumn" prefWidth="75.0" text="Estado" />
+                        <TableColumn fx:id="origenColumn" prefWidth="75.0" text="Origen" />
+                        <TableColumn fx:id="destinoColumn" prefWidth="75.0" text="Destino" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button layoutX="118.0" layoutY="598.0" mnemonicParsing="false" text="Nuevo" />
-                  <Button layoutX="359.0" layoutY="598.0" mnemonicParsing="false" text="Eliminar" />
+                  <Button layoutX="121.0" layoutY="562.0" mnemonicParsing="false" text="Nuevo" />
+                  <Button layoutX="359.0" layoutY="562.0" mnemonicParsing="false" text="Eliminar" />
+                  <Label layoutX="21.0" layoutY="14.0" text="Sucursal Origen" />
+                  <ChoiceBox layoutX="112.0" layoutY="10.0" prefWidth="150.0" />
+                  <ChoiceBox layoutX="426.0" layoutY="10.0" prefWidth="150.0" />
+                  <Label layoutX="331.0" layoutY="14.0" text="Sucursal Destino" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="611.0" prefWidth="729.0">
@@ -47,14 +51,14 @@
                         <Label text="Estado" GridPane.rowIndex="1" />
                         <Label text="Origen" GridPane.rowIndex="2" />
                         <Label text="Destino" GridPane.rowIndex="3" />
-                        <TextField GridPane.columnIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="id_pedido" disable="true" GridPane.columnIndex="1" />
                         <Label text="Fecha" GridPane.rowIndex="4" />
                         <Label text="Urgencia" GridPane.rowIndex="5" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField prefHeight="57.0" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <ChoiceBox fx:id="estado" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ChoiceBox fx:id="origen" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <ChoiceBox fx:id="destino" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <ChoiceBox fx:id="urgencia" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <DatePicker fx:id="fecha" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
                   <Label layoutX="16.0" layoutY="234.0" text="Detalles Cliente">
@@ -75,13 +79,13 @@
                     </rowConstraints>
                      <children>
                         <Label text="RUT" />
-                        <TextField GridPane.columnIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="rut" disable="true" GridPane.columnIndex="1" />
+                        <TextField fx:id="nombre" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="telefono" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Label text="Nombre" GridPane.rowIndex="1" />
                         <Label text="Telefono" GridPane.rowIndex="2" />
                         <Label text="Direccion" GridPane.rowIndex="3" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="direccion" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
                   <Label layoutX="15.0" layoutY="14.0" text="Detalles pedido">
@@ -94,8 +98,8 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="508.0" layoutY="476.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Despachar" />
-                  <Button layoutX="508.0" layoutY="547.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" />
+                  <Button layoutX="526.0" layoutY="463.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Despachar" />
+                  <Button layoutX="526.0" layoutY="533.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" />
                   <GridPane layoutX="20.0" layoutY="415.0" prefHeight="59.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -108,8 +112,8 @@
                      <children>
                         <Label text="Peso" />
                         <Label text="Volumen" GridPane.rowIndex="1" />
-                        <TextField GridPane.columnIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField disable="true" GridPane.columnIndex="1" />
+                        <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <Button layoutX="295.0" layoutY="488.0" mnemonicParsing="false" text="Agregar" />
