--- a/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ListadoPedidosController">
    <children>
-      <SplitPane dividerPositions="0.43859649122807015" layoutX="6.0" layoutY="7.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.39914163090128757" layoutX="-43.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-43.0" AnchorPane.rightAnchor="43.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -24,12 +24,14 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button layoutX="121.0" layoutY="562.0" mnemonicParsing="false" text="Nuevo" />
+                  <Button layoutX="121.0" layoutY="562.0" mnemonicParsing="false" onAction="#handleNuevo" text="Nuevo" />
                   <Button layoutX="359.0" layoutY="562.0" mnemonicParsing="false" text="Eliminar" />
-                  <Label layoutX="21.0" layoutY="14.0" text="Sucursal Origen" />
-                  <ChoiceBox layoutX="112.0" layoutY="10.0" prefWidth="150.0" />
-                  <ChoiceBox layoutX="426.0" layoutY="10.0" prefWidth="150.0" />
-                  <Label layoutX="331.0" layoutY="14.0" text="Sucursal Destino" />
+                  <Label layoutX="20.0" layoutY="14.0" prefHeight="20.0" prefWidth="59.0" text="Sucursal">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="sucursal" layoutX="93.0" layoutY="16.0" text="sucursal" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="611.0" prefWidth="729.0">
@@ -62,12 +64,12 @@
                         <DatePicker fx:id="fecha" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
-                  <Label layoutX="16.0" layoutY="234.0" text="Detalles Cliente">
+                  <Label layoutX="15.0" layoutY="223.0" text="Detalles Cliente">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <GridPane layoutX="20.0" layoutY="257.0" prefHeight="118.0" prefWidth="404.0">
+                  <GridPane layoutX="14.0" layoutY="251.0" prefHeight="118.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -94,9 +96,9 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="526.0" layoutY="463.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Despachar" />
-                  <Button layoutX="526.0" layoutY="533.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" />
-                  <GridPane layoutX="20.0" layoutY="415.0" prefHeight="59.0" prefWidth="404.0">
+                  <Button layoutX="202.0" layoutY="533.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Despachar" />
+                  <Button layoutX="414.0" layoutY="533.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" />
+                  <GridPane layoutX="14.0" layoutY="410.0" prefHeight="81.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -104,16 +106,19 @@
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label text="Peso" />
                         <Label text="Volumen" GridPane.rowIndex="1" />
                         <TextField fx:id="peso" disable="true" GridPane.columnIndex="1" />
                         <TextField fx:id="volumen" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="Monto calculado" GridPane.rowIndex="2" />
+                        <Label fx:id="montoEncomienda" text="\$" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
-                  <Button layoutX="295.0" layoutY="488.0" mnemonicParsing="false" onAction="#handleAgregarEncomienda" text="Agregar" />
-                  <TableView fx:id="tabla_encomiendas" layoutX="451.0" layoutY="41.0" prefHeight="403.0" prefWidth="309.0">
+                  <Button layoutX="187.0" layoutY="491.0" mnemonicParsing="false" onAction="#handleAgregarEncomienda" text="Agregar" />
+                  <TableView fx:id="tabla_encomiendas" layoutX="451.0" layoutY="41.0" prefHeight="274.0" prefWidth="309.0">
                     <columns>
                       <TableColumn fx:id="id_encomiendaColumn" prefWidth="95.0" text="ID" />
                       <TableColumn fx:id="pesoColumn" prefWidth="93.0" text="Peso" />
@@ -129,6 +134,38 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
+                  <Label layoutX="14.0" layoutY="383.0" text="Agregar Encomienda">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="451.0" layoutY="342.0" text="Pago">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <GridPane layoutX="451.0" layoutY="369.0" prefHeight="107.0" prefWidth="309.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Medio de pago" GridPane.rowIndex="1" />
+                        <Label text="Monto recibido" GridPane.rowIndex="3" />
+                        <Label text="Estado" GridPane.rowIndex="2" />
+                        <ChoiceBox fx:id="medioPago" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ChoiceBox fx:id="estadoPago" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="montoRecibido" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Monto" />
+                        <Label fx:id="montoTotal" text="\$" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
                </children>
             </AnchorPane>
         </items>
